<resources>
    <string name="app_name">VigiApp</string>
    <string name="enter">Entra</string>
    <string name="title_activity_reports">Mis Reportes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="title_activity_new_report">Nuevo Reporte</string>
    <string name="description">Descripcion (250 chars)</string>
    <string name="hour">Hora:</string>
    <string name="date">Fecha:</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_details">Mi Reporte</string>
    <string name="title_activity_category">Seleccione una Categoria</string>
    <string name="report">Reporte</string>
    <string name="edit">Editar</string>
    <string name="category">Categoria</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_user">Mis Datos</string>
    <string name="id_number"># Identificacion</string>
    <string name="full_name">Nombres:</string>
    <string name="last_name">Apellidos:</string>
    <string name="region">Municipio</string>
    <string name="neighborhood">Barrio:</string>
    <string name="gender">Genero</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="age">Edad</string>
    <string name="phone">Telefono</string>
    <string name="email">email</string>
    <string name="score">Puntos:</string>
    <string name="location">Lugar</string>
    <string name="facebook_app_id">357397514717772</string>
    <string name="facebook_application_id" translatable="false">548027815637976</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb548027815637976</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb5480278156379762</string>
    <string name="unknown_response">Error Desconocido</string>
    <string name="sign_in_cancelled">Acceso cancelado</string>
    <string name="no_internet_connection">No tienes conexion</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="unknown_sign_in_response">Error de login desconocido</string>
    <string name="no_reports">No tienes nigun reporte</string>
    <string name="prev">anterior</string>
    <string name="next">siguiente</string>
    <string name="title_activity_new_user">Nuevo Miembro</string>
    <string name="name">Nombre:</string>
    <string name="please_select">Seleccione por favor</string>
    <string name="banner_image">Logo Sivico</string>
    <string name="user_image">Foto Usuario</string>
    <string name="trusted_data">Datos de usuario</string>
    <string name="category_logo">Logo Categoria</string>
    <string name="preview_image">Imagen de prueba</string>
    <string name="report_image">evidencia</string>
    <string name="my_score">Mis Puntos</string>
    <string name="my_reports">Mis Denuncias</string>
    <string name="my_user_data">Mis Datos</string>
    <string name="sign_out">Desconectarme</string>
    <string name="communicate">Communicate</string>
    <string name="share">Compartir</string>
    <string name="new_report">Nueva</string>
    <string name="points">Puntos:</string>
    <string name="my_location">Mi posicion</string>
    <string name="subcategories">Subcategorias</string>
    <string name="go_to_score">Acumula puntos para obtener grandes premios y subir tu rango</string>
    <string name="get_point">Acumula Puntos</string>
    <string name="please_take_picture">Toma una foto primero</string>
    <string name="set_anonymous">Usuario Anonimo</string>
    <string name="user_no_image">No has subido una imagen, puedes intentarlo cuando quieras en la opcion editar</string>
    <string name="title_activity_sub_category">Seleccione una Subcategoria</string>
    <string name="cancel">Cancelar</string>
    <string name="yes_definitely">Aceptar</string>
    <string name="anonymous_question">Puede que no accedas a ciertas recompensas</string>
    <string name="anonymous">¿Crear perfil anonimo?</string>
</resources>
