<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context="com.rocket.sivico.GUI.MainActivity">

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/report" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:text="@string/app_name"
        android:fontFamily="@font/pacifico"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/banner_image"
        app:srcCompat="@drawable/city" />

</LinearLayout>
