<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context="com.rocket.sivico.GUI.NewReportActivityFragment"
        tools:showIn="@layout/activity_new_report">

        <Button
            android:id="@+id/add_evidence_button"
            style="@style/FirebaseUI.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="seleccionar evidencia" />

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/preview_image"
            app:srcCompat="@drawable/ic_menu_camera" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <TextView
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/report_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <TextView
            android:id="@+id/report_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Health" />

        <TextView
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/report_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="12:37 PM" />

            <Button
                android:id="@+id/edit_hour_button"
                style="@style/FirebaseUI.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/edit" />
        </LinearLayout>

        <TextView
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/report_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="15-06-2017" />

            <Button
                android:id="@+id/edit_date_button"
                style="@style/FirebaseUI.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/edit" />
        </LinearLayout>

        <TextView
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_save" />
    </LinearLayout>
</ScrollView>

