<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context="com.rocket.sivico.GUI.UserActivity">
    <!--tools:showIn="@layout/activity_user">-->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:layout_marginRight="8dp"
                        android:text="Juan Camilo" />

                    <TextView
                        android:id="@+id/user_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"

                        android:text="Rodriguez Duran" />
                </LinearLayout>

                <TextView
                    android:id="@+id/user_email"
                    android:paddingTop="16dp"
                    style="@style/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="carlos.martinez@gmail.com" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TableRow>

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/id_number" />

                    <TextView

                        android:id="@+id/user_id_number"
                        android:text="1013642638" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/region" />

                    <TextView
                        android:id="@+id/user_region"
                        android:text="Bogota" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/neighborhood" />

                    <TextView
                        android:id="@+id/user_neighborhood"
                        android:text="Restrepo" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/gender" />

                    <TextView
                        android:id="@+id/user_gender"
                        android:text="Masculino" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/age" />

                    <TextView
                        android:id="@+id/user_age"
                        android:text="24" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/phone" />

                    <TextView
                        android:id="@+id/user_phone"
                        android:text="3195456735" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/textTitle"
                        android:text="@string/email" />


                </TableRow>
            </TableLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbar_background"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:minHeight="?attr/actionBarSize"
                android:scaleType="centerCrop"
                android:src="@drawable/city"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="top"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>

